# keyvolve

./: .gitignore  .gitmodules  Cargo.toml  keyvolve.json  keyvolve.yaml  plan.md  readme.md  rustfmt.toml
.cargo/: config.toml
.github/: copilot-instructions.md
data/: digraphs.json  keyboard.json  keyboard.ranked.csv  keyboard.ranked.json  layouts.1.csv  layouts.10.csv  layouts.11.csv  layouts.2.csv  layouts.3.csv  layouts.4.csv  layouts.6.csv  layouts.8.csv  layouts.csv  layouts.old.csv  rank-session.json  rank-session.json.bak  results.csv  schema.ods  seed.csv  synthesised  synthesised.csv  synthesised.txt
data/bigrams/: synthesise.13.csv  synthesise.18ff.csv  synthesise.381e.csv  synthesise.4665.csv  synthesise.585d.csv  synthesise.b059.csv  synthesise.europarl-v7.csv  synthesise.europarl-v8.csv  synthesise.linux_input.csv  synthesise.undoc.2000.es.csv  synthesise.undoc.2000.fr.csv  wikipedia.en_filtered.csv
data/stats/: big.bigrams.csv  big.letters.csv  europarl-v8.bigrams.csv  europarl-v8.letters.csv  frequencies.cs.csv  frequencies.csv  frequencies.js.csv  frequencies.py.csv  frequencies.rs.csv  giga-fren.bigrams.csv  giga-fren.letters.csv  merged.bigrams.aggregated.csv  merged.bigrams.csv  merged.letters.csv  merged.source-stats.json  news-2014.bigrams.aggregated.csv  news-2014.bigrams.csv  news-2014.letters.csv  news-discuss.bigrams.csv  news-discuss.letters.csv  undoc-2000.bigrams.csv  undoc-2000.letters.csv  (+4 more)
scripts/: aggregate_bigrams.ps1  merge-layouts.ps1  merge.ps1  run.ps1  submodules.ps1
src/: app.rs  config.rs  evaluator.rs  main.rs
(+84 files in other folders)
