[package]
edition = "2024"
name = "keyvolve"
version = "0.2.0"

[dependencies]
cliffa = {path = "cliffa"}
darwin = {path = "darwin"}
itertools = "0.14.0" # Itertools library.
miette = {version = "7.6.0", features = [
  "fancy",
]}# Uniformed errors and fancy output.
rand = "0.10.2" # Randomness.
rayon = "1.12.0" # Parallel iterators.
regex = "1.13.0" # To parse dates for example.
rustc-hash = "2.1.3"
serde = {version = "1.0.228", features = [
  "derive",
#   "rc",
]}# Serialization and deserialization.
serde_json = "1.0.150" # Json support.
thiserror = "2.0.18" # Errors.
tracing = "0.1.44" # Logging library.

[workspace]
members = ["cliffa", "darwin"]
